Always show the scrollbar to make the ui stop flickering when theres no scroll needed

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -235,3 +235,7 @@ margin-bottom: 10px;
       font-weight: 700;
     }
 }
+
+html {
+  overflow-y:scroll; /*always show the scrollbar*/
+}
